--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve -s build && node server/app.js",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build && node server/app.js"
   },
   "eslintConfig": {
     "extends": "react-app"
